# any-player-shared-rust

./: AGENT_HANDOFF.txt  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/any_player_core/: Cargo.toml
crates/any_player_core/src/: lib.rs  models.rs  provider_api.rs  providers.rs
crates/any_player_core/src/provider_clients/: jellyfin.rs  mod.rs  plex.rs  spotify.rs
crates/any_player_ffi_android/: Cargo.toml
crates/any_player_ffi_android/src/: lib.rs
crates/any_player_spotify_engine/: Cargo.toml
crates/any_player_spotify_engine/src/: lib.rs  librespot_player.rs
patches/librespot-core/: .cargo_vcs_info.json  Cargo.toml  build.rs
patches/librespot-core/src/: config.rs  http_client.rs  login5.rs  spclient.rs
