[package]
name = "any_player_ffi_android"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
any_player_spotify_engine = { path = "../any_player_spotify_engine" }
async-trait = "0.1"
jni = "0.21"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
url = "2"
