[package]
name = "any_player_spotify_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
librespot-core = { version = "0.8", default-features = false, features = [
    "rustls-tls-webpki-roots",
] }
librespot-playback = { version = "0.8", default-features = false, features = [
    "rodio-backend",
    "rustls-tls-webpki-roots",
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["sync", "rt", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync"] }
